--- a/Ulearn game/Properties/Resources.resx
+++ b/Ulearn game/Properties/Resources.resx
@@ -139,6 +139,18 @@
   <data name="bita_idle2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\player\bita\bita_idle2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="jacket_dead_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\src\jacket\jacket_dead_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="jacket_dead_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\src\jacket\jacket_dead_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="jacket_dead_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\src\jacket\jacket_dead_3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="jacket_dead_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\src\jacket\jacket_dead_4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="jacket_idle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\jacket\jacket_idle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
