--- a/Ulearn game/Properties/Resources.resx
+++ b/Ulearn game/Properties/Resources.resx
@@ -142,6 +142,9 @@
   <data name="brick" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\texture\brick.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="brick1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\src\texture\brick.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="brick2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\texture\brick2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
