--- a/Ulearn game/Properties/Resources.resx
+++ b/Ulearn game/Properties/Resources.resx
@@ -148,6 +148,12 @@
   <data name="brick2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\texture\brick2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="brick_go" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\src\texture\brick_go.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="brick_old" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\src\texture\brick_old.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="floor_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\texture\floor_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
