--- a/Ulearn game/Properties/Resources.resx
+++ b/Ulearn game/Properties/Resources.resx
@@ -154,6 +154,9 @@
   <data name="brick_old" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\texture\brick_old.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\src\texture\bullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="floor_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\texture\floor_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -174,6 +177,9 @@
   </data>
   <data name="jacket_idle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\jacket\jacket_idle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="jacket_pistol" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\src\jacket\jacket_pistol.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="kill" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\sound\kill.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
