--- a/Ulearn game/Properties/Resources.resx
+++ b/Ulearn game/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="bandit_dead" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\bandit\bandit_dead.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bandit_rifle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\src\bandit\bandit_rifle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="bita_attack1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\player\bita\bita_attack1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
