--- a/Ulearn game/Properties/Resources.resx
+++ b/Ulearn game/Properties/Resources.resx
@@ -151,6 +151,9 @@
   <data name="floor_brick" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\texture\floor_brick.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="glass" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\src\texture\glass.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="jacket_dead_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\src\jacket\jacket_dead_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
